2029-05-09  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.2 released.
	==========================


	Tag sources with `VER-2-10-2.

	* README: Updated.
	* man/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2020-05-08  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c (main): Fix thinko introduced in commit from
	2020-05-01.

2020-05-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* ftcommon.c (FTDemo_Draw_Header): Right-flush filename.

2020-05-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Move man pages: src/*.1 -> man/*.1

2020-05-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (unixdev): Do not call pkg-config repeatedly.

2020-05-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (FT_INCLUDES): Remove redundant BUILD_DIR.

2020-05-01  David Turner  <david@freetype.org>

	Fix compilation warnings (#58257).

	* graph/x11/grx11.c (gr_x11_surface_listen_event): Change return
	type of to match the expected type.

	* src/compos.c, src/ftchkwd.c, src/ftdump.c, src/ftlint.c,
	src/ftmemchk.c, src/ftsbit.c, src/fttimer.c, src/fttry.c (main):
	Remove problematic uses of `strncpy' and replace them with
	`snprintf', which takes the size of the target buffer.

	Remove un-needed uses of the `alt_filename' array.

2020-04-16  Anuj Verma  <anujv@iitbhilai.ac.in>

	* Makefile (FT_INCLUDES): Remove configuration directory since
	its content is included by `ft2build.h'.

2020-04-16  Werner Lemberg  <wl@gnu.org>

	* Makefile (CC) [unix]: Synchronize with recent change in FreeType.

2020-04-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (COMPILE): ... and remove defines.

2020-04-14  Anuj Verma  <anujv@iitbhilai.ac.in>

	Fix compilation under Windows.

	* Makefile (FT_INCLUDES): Add configuration directory.  Without
	that, the file `ftoption.h' that is added to the $(COMPILE) variable
	gets found only if it is located in $(DEVEL_DIR), this is, if we do
	a `make devel' build.
