@@ -1,3 +1,7 @@
+2020-05-04  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftcommon.c (FTDemo_Install_Font): Remove unused buffer.
+
 2029-05-09  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.10.2 released.
